# libvirtualdisplay

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: _top-issues.yml  ci.yml  release.yml
docs/: release-validation.md  support-diagnostics.md
src/driver/: CMakeLists.txt  control_client.cpp  control_protocol.cpp  display_identity.cpp  driver_controller.cpp  edid.cpp  hdr_capabilities.cpp  ioctl_dispatcher.cpp  lease_store.cpp  windows_cli_utils.cpp  windows_control_client.cpp
src/driver/include/virtual_display/driver/: control_client.h  control_protocol.h  display_identity.h  driver_controller.h  edid.h  hdr_capabilities.h  ioctl_dispatcher.h  lease_store.h  windows_cli_utils.h  windows_control_client.h  windows_control_protocol.h
src/driver/windows_driver/: CMakeLists.txt  SunshineVirtualDisplayDriver.inf  driver_main.cpp
tests/: CMakeLists.txt
tests/unit/driver/: test_cli_contract.cpp  test_control_client.cpp  test_control_protocol.cpp  test_display_identity.cpp  test_driver_controller.cpp  test_edid.cpp  test_hdr_capabilities.cpp  test_ioctl_dispatcher.cpp  test_lease_store.cpp  test_probe_contract.cpp  test_windows_driver_contract.cpp
tools/: sign_driver.ps1  validate_release_evidence.ps1  virtualdisplay.cpp  virtualdisplay_broker.cpp  virtualdisplay_probe.cpp
