if(NOT WIN32 OR NOT MSVC)
    message(FATAL_ERROR "BUILD_SUNSHINE_VIRTUAL_DISPLAY_DRIVER requires a Windows MSVC/WDK build environment")
endif()

set(SUNSHINE_DRIVER_TARGET SunshineVirtualDisplayDriver)
set(SUNSHINE_DRIVER_SDK_VERSION "${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")

if(NOT SUNSHINE_DRIVER_SDK_VERSION)
    set(SUNSHINE_DRIVER_SDK_VERSION "$ENV{WindowsSDKVersion}")
    string(REGEX REPLACE "\\\\$" "" SUNSHINE_DRIVER_SDK_VERSION "${SUNSHINE_DRIVER_SDK_VERSION}")
endif()

if(NOT SUNSHINE_DRIVER_SDK_VERSION)
    message(FATAL_ERROR "Unable to determine Windows SDK version for ${SUNSHINE_DRIVER_TARGET}")
endif()

set(SUNSHINE_DRIVER_WDF_VERSION "2.25" CACHE STRING "UMDF version for the Sunshine virtual display driver" FORCE)
set(SUNSHINE_DRIVER_IDDCX_VERSION "1.10" CACHE STRING "IddCx include/library version for the Sunshine virtual display driver" FORCE)
set(SUNSHINE_DRIVER_ARCH "${CMAKE_VS_PLATFORM_NAME}")
set(SUNSHINE_DRIVER_INF "${CMAKE_CURRENT_SOURCE_DIR}/SunshineVirtualDisplayDriver.inf")

if(NOT SUNSHINE_DRIVER_ARCH)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(SUNSHINE_DRIVER_ARCH "x64")
    else()
        set(SUNSHINE_DRIVER_ARCH "x86")
    endif()
endif()

if(SUNSHINE_DRIVER_ARCH MATCHES "^[Xx]64$|^[Aa][Mm][Dd]64$")
    set(SUNSHINE_DRIVER_INF2CAT_OS "10_X64")
elseif(SUNSHINE_DRIVER_ARCH MATCHES "^[Aa][Rr][Mm]64$")
    set(SUNSHINE_DRIVER_INF2CAT_OS "10_ARM64")
elseif(SUNSHINE_DRIVER_ARCH MATCHES "^[Xx]86$|^[Ww][Ii][Nn]32$")
    set(SUNSHINE_DRIVER_INF2CAT_OS "10_X86")
else()
    message(FATAL_ERROR "Unsupported driver architecture for Inf2Cat: ${SUNSHINE_DRIVER_ARCH}")
endif()

set(_SUNSHINE_DRIVER_DEFAULT_WDK_ROOT "C:/Program Files (x86)/Windows Kits/10")
if(NOT SUNSHINE_DRIVER_WDK_ROOT)
    if(EXISTS "${_SUNSHINE_DRIVER_DEFAULT_WDK_ROOT}/Lib/${SUNSHINE_DRIVER_SDK_VERSION}/um/${SUNSHINE_DRIVER_ARCH}/iddcx/${SUNSHINE_DRIVER_IDDCX_VERSION}/IddCxStub.lib")
        set(SUNSHINE_DRIVER_WDK_ROOT "${_SUNSHINE_DRIVER_DEFAULT_WDK_ROOT}" CACHE PATH "Windows Kits root used for the Sunshine virtual display driver" FORCE)
    else()
        set(SUNSHINE_DRIVER_WDK_ROOT "$ENV{WindowsSdkDir}" CACHE PATH "Windows Kits root used for the Sunshine virtual display driver" FORCE)
    endif()
endif()

if(NOT SUNSHINE_DRIVER_WDK_ROOT)
    message(FATAL_ERROR "SUNSHINE_DRIVER_WDK_ROOT is required to build ${SUNSHINE_DRIVER_TARGET}")
endif()

cmake_path(ABSOLUTE_PATH SUNSHINE_DRIVER_WDK_ROOT NORMALIZE OUTPUT_VARIABLE SUNSHINE_DRIVER_WDK_ROOT)
set(_SUNSHINE_DRIVER_IDDCX_LIB "${SUNSHINE_DRIVER_WDK_ROOT}/Lib/${SUNSHINE_DRIVER_SDK_VERSION}/um/${SUNSHINE_DRIVER_ARCH}/iddcx/${SUNSHINE_DRIVER_IDDCX_VERSION}/IddCxStub.lib")
if(NOT EXISTS "${_SUNSHINE_DRIVER_IDDCX_LIB}")
    message(FATAL_ERROR "Unable to find IddCxStub.lib under SUNSHINE_DRIVER_WDK_ROOT=${SUNSHINE_DRIVER_WDK_ROOT}")
endif()
unset(_SUNSHINE_DRIVER_DEFAULT_WDK_ROOT)
unset(_SUNSHINE_DRIVER_IDDCX_LIB)

add_library(${SUNSHINE_DRIVER_TARGET} SHARED
        driver_main.cpp
        "${SUNSHINE_DRIVER_INF}")

find_program(SUNSHINE_DRIVER_TRACEWPP
        NAMES TraceWPP.exe tracewpp.exe
        PATHS
        "${SUNSHINE_DRIVER_WDK_ROOT}/bin/${SUNSHINE_DRIVER_SDK_VERSION}/x64"
        "${SUNSHINE_DRIVER_WDK_ROOT}/bin/${SUNSHINE_DRIVER_SDK_VERSION}/x86"
        NO_DEFAULT_PATH)

if(NOT SUNSHINE_DRIVER_TRACEWPP)
    message(FATAL_ERROR "TraceWPP.exe is required to build ${SUNSHINE_DRIVER_TARGET} WPP/IFR tracing")
endif()

set(SUNSHINE_DRIVER_WPP_TMH "${CMAKE_CURRENT_BINARY_DIR}/driver_main.tmh")
set(SUNSHINE_DRIVER_WPP_CONFIG "${SUNSHINE_DRIVER_WDK_ROOT}/bin/${SUNSHINE_DRIVER_SDK_VERSION}/WppConfig/Rev1")
add_custom_command(OUTPUT "${SUNSHINE_DRIVER_WPP_TMH}"
        COMMAND "${SUNSHINE_DRIVER_TRACEWPP}"
        -um
        -dll
        -DWPP_MACRO_USE_KM_VERSION_FOR_UM=1
        -DENABLE_WPP_RECORDER=1
        "-I${SUNSHINE_DRIVER_WPP_CONFIG}"
        "-func:TraceEvents(LEVEL,FLAGS,MSG,...)"
        "-oDir:${CMAKE_CURRENT_BINARY_DIR}"
        driver_main.cpp
        DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/driver_main.cpp"
        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
        VERBATIM)
add_custom_target(${SUNSHINE_DRIVER_TARGET}WppTrace DEPENDS "${SUNSHINE_DRIVER_WPP_TMH}")
add_dependencies(${SUNSHINE_DRIVER_TARGET} ${SUNSHINE_DRIVER_TARGET}WppTrace)

target_link_libraries(${SUNSHINE_DRIVER_TARGET}
        PRIVATE
        libvirtualdisplay::driver
        advapi32
        avrt
        d3d11
        dxgi
        "${SUNSHINE_DRIVER_WDK_ROOT}/Lib/${SUNSHINE_DRIVER_SDK_VERSION}/um/${SUNSHINE_DRIVER_ARCH}/iddcx/${SUNSHINE_DRIVER_IDDCX_VERSION}/IddCxStub.lib"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Lib/wdf/umdf/${SUNSHINE_DRIVER_ARCH}/${SUNSHINE_DRIVER_WDF_VERSION}/WdfDriverStubUm.lib"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Lib/${SUNSHINE_DRIVER_SDK_VERSION}/um/${SUNSHINE_DRIVER_ARCH}/wpprecorderum.lib"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Lib/${SUNSHINE_DRIVER_SDK_VERSION}/um/${SUNSHINE_DRIVER_ARCH}/ntdll.lib")

target_include_directories(${SUNSHINE_DRIVER_TARGET}
        PRIVATE
        "${CMAKE_CURRENT_BINARY_DIR}"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Include/wdf/umdf/${SUNSHINE_DRIVER_WDF_VERSION}"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Include/${SUNSHINE_DRIVER_SDK_VERSION}/um"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Include/${SUNSHINE_DRIVER_SDK_VERSION}/shared"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Include/${SUNSHINE_DRIVER_SDK_VERSION}/ucrt"
        "${SUNSHINE_DRIVER_WDK_ROOT}/Include/${SUNSHINE_DRIVER_SDK_VERSION}/um/iddcx/${SUNSHINE_DRIVER_IDDCX_VERSION}")

target_compile_definitions(${SUNSHINE_DRIVER_TARGET}
        PRIVATE
        UNICODE
        _UNICODE
        NOMINMAX
        UMDF_DRIVER
        UMDF_VERSION_MAJOR=2
        UMDF_VERSION_MINOR=25
        UMDF_MINIMUM_VERSION_REQUIRED=25
        _ATL_NO_WIN_SUPPORT
        IDDCX_VERSION_MAJOR=1
        IDDCX_VERSION_MINOR=10
        IDDCX_MINIMUM_VERSION_REQUIRED=4
        WPP_MACRO_USE_KM_VERSION_FOR_UM=1
        ENABLE_WPP_RECORDER=1)

set_target_properties(${SUNSHINE_DRIVER_TARGET}
        PROPERTIES
        PREFIX ""
        OUTPUT_NAME "SunshineVirtualDisplayDriver"
        SUFFIX ".dll")

# Keep the packaged INF as a real build output. A POST_BUILD-only copy does not
# run when only the INF changes, which can leave pnputil installing a stale driver package.
set(SUNSHINE_DRIVER_PACKAGED_INF "${CMAKE_CURRENT_BINARY_DIR}/SunshineVirtualDisplayDriver.inf")
add_custom_command(OUTPUT "${SUNSHINE_DRIVER_PACKAGED_INF}"
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${SUNSHINE_DRIVER_INF}"
        "${SUNSHINE_DRIVER_PACKAGED_INF}"
        DEPENDS "${SUNSHINE_DRIVER_INF}")
add_custom_target(${SUNSHINE_DRIVER_TARGET}InfFile DEPENDS "${SUNSHINE_DRIVER_PACKAGED_INF}")
add_dependencies(${SUNSHINE_DRIVER_TARGET} ${SUNSHINE_DRIVER_TARGET}InfFile)

find_program(SUNSHINE_DRIVER_INF2CAT
        NAMES Inf2Cat.exe
        PATHS
        "${SUNSHINE_DRIVER_WDK_ROOT}/bin/${SUNSHINE_DRIVER_SDK_VERSION}/x86"
        "${SUNSHINE_DRIVER_WDK_ROOT}/bin/${SUNSHINE_DRIVER_SDK_VERSION}/x64"
        NO_DEFAULT_PATH)

if(NOT SUNSHINE_DRIVER_INF2CAT)
    message(FATAL_ERROR "Inf2Cat.exe is required to package ${SUNSHINE_DRIVER_TARGET}")
endif()

set(SUNSHINE_DRIVER_PACKAGED_CAT "${CMAKE_CURRENT_BINARY_DIR}/sunshinevirtualdisplaydriver.cat")
add_custom_command(OUTPUT "${SUNSHINE_DRIVER_PACKAGED_CAT}"
        COMMAND "${SUNSHINE_DRIVER_INF2CAT}" /driver:"${CMAKE_CURRENT_BINARY_DIR}" /os:${SUNSHINE_DRIVER_INF2CAT_OS}
        DEPENDS ${SUNSHINE_DRIVER_TARGET} "${SUNSHINE_DRIVER_PACKAGED_INF}")
add_custom_target(${SUNSHINE_DRIVER_TARGET}PackageFiles ALL DEPENDS "${SUNSHINE_DRIVER_PACKAGED_CAT}")

install(TARGETS ${SUNSHINE_DRIVER_TARGET} RUNTIME DESTINATION driver)
install(FILES "$<TARGET_PDB_FILE:${SUNSHINE_DRIVER_TARGET}>" DESTINATION driver OPTIONAL)
install(FILES "${SUNSHINE_DRIVER_PACKAGED_INF}" DESTINATION driver)
install(FILES "${SUNSHINE_DRIVER_PACKAGED_CAT}" DESTINATION driver RENAME SunshineVirtualDisplayDriver.cat)
